RESOLVED FIXED66672
[Qt][WK2] ViewportInteractionEngine: the position of the content is not corrected when scaling the page manually
https://bugs.webkit.org/show_bug.cgi?id=66672
Summary [Qt][WK2] ViewportInteractionEngine: the position of the content is not corre...
Benjamin Poulain
Reported 2011-08-22 07:10:54 PDT
When zooming, both the position and the scale needs to come back to the boundary.
Attachments
Patch (4.37 KB, patch)
2011-08-22 07:16 PDT, Benjamin Poulain
kenneth: review+
Benjamin Poulain
Comment 1 2011-08-22 07:16:13 PDT
Kenneth Rohde Christiansen
Comment 2 2011-08-22 07:21:29 PDT
Comment on attachment 104674 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=104674&action=review > Source/WebKit2/ChangeLog:9 > + This method is now used as the entry point for animations in order to avoid bugs of scale or position. s/of/regarding > Source/WebKit2/UIProcess/qt/ViewportInteractionEngine.cpp:254 > + animateContentScaleIntoBoundariesIfNeeded(); > + animateContentPositionIntoBoundariesIfNeeded(); Shouldn't they be animated together?
Benjamin Poulain
Comment 3 2011-08-22 07:36:57 PDT
(In reply to comment #2) > s/of/regarding > > > Source/WebKit2/UIProcess/qt/ViewportInteractionEngine.cpp:254 > > + animateContentScaleIntoBoundariesIfNeeded(); > > + animateContentPositionIntoBoundariesIfNeeded(); > > Shouldn't they be animated together? I think QParallelAnimationGroup will do the trick. I will try to keep the methods separated even if they must have a common animation, just for the sake of keeping the code clean.
Benjamin Poulain
Comment 4 2011-08-23 05:39:40 PDT
Note You need to log in before you can comment on or make changes to this bug.