[Qt][WK2] ViewportInteractionEngine: the position of the content is not corrected when scaling the page manually https://bugs.webkit.org/show_bug.cgi?id=66672

Reviewed by Kenneth Rohde Christiansen.

Add the method animateContentIntoBoundariesIfNeeded() to move the content back into both scale and position boundaries.
This method is now used as the entry point for animations in order to avoid bugs regarding scale or position.

The existing animation methods were renamed accordingly for clarity and consistency with the updateContent methods.

* UIProcess/qt/ViewportInteractionEngine.cpp:
(WebKit::ViewportInteractionEngine::panGestureEnded):
(WebKit::ViewportInteractionEngine::pinchGestureEnded):
(WebKit::ViewportInteractionEngine::animateContentIntoBoundariesIfNeeded):
(WebKit::ViewportInteractionEngine::animateContentPositionIntoBoundariesIfNeeded):
(WebKit::ViewportInteractionEngine::animateContentScaleIntoBoundariesIfNeeded):
* UIProcess/qt/ViewportInteractionEngine.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@93592 bbb929c8-8fbe-4397-9dbb-9b2b20218538