third_party/WebKit/Source/WebKit2/UIProcess/qt/ViewportInteractionEngine.h
@@ -79,8 +79,9 @@ private:
     void updateContentScaleIfNeeded();
     void updateContentPositionIfNeeded();
 
-    void animateContentPositionToBoundaries();
-    void animateContentScaleToBoundaries();
+    void animateContentIntoBoundariesIfNeeded();
+    void animateContentPositionIntoBoundariesIfNeeded();
+    void animateContentScaleIntoBoundariesIfNeeded();
 
     void scaleContent(const QPointF& centerInContentCoordinate, qreal scale);
 
